attempt to fix white space issue using overflow hidden

--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,7 @@ section {
 .contact {
   height: 100vh;
   width: 100%;
+  overflow: hidden;
 /*  -webkit-filter: blur(0.000001px);*/
 /*  -webkit-font-smoothing: antialiased !important;*/
 /*  text-shadow: 1px 1px 1px rgba(0,0,0,0.004);*/
@@ -54,6 +55,7 @@ section.hero {
 }
 
 section.grey {
+/*  background-color: #4d4d4d;*/
   background-color: rgba(0,0,0,0.7);
   background-attachment: fixed;
 }
@@ -114,6 +116,7 @@ section.grey {
 padding-top: 8.5%;
 bottom: 0;
 border: 1px solid transparent;
+overflow: hidden;
 }
 
 .section.contact p {
